# DemoBlog

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/authapp/: admin.py  api.py  apps.py  dto.py  models.py  redis_wrapper.py  security.py  services.py
backend/authapp/migrations/: 0001_initial.py
backend/backend/: logging_config.py  settings.py  urls.py
backend/blog/: __init__.py  admin.py  models.py
backend/blog/comment/: api.py  schema.py  services.py
backend/blog/like/: api.py  schema.py  services.py
backend/blog/migrations/: 0001_initial.py  0002_comment_blog_commen_post_id_5fee65_idx_and_more.py
backend/blog/post/: api.py  schema.py  services.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  apiClient.js  urls.js  utils.js
frontend/src/components/: BlogPage.jsx  Comment.jsx  LoginForm.jsx
frontend/src/store/: commentStore.js  postStore.js
infra/: .env.example  docker-compose.yml
infra/nginx/: Dockerfile  default.conf.template  default_http.conf.template  entrypoint.sh  proxy.conf.template
